Proyecto Individual/force-app/main/default/objects/Trail_Module__c/fields/Module_Tile__c.field-meta.xml
<CustomField>
    <fullName>Module_Tile__c</fullName>
    <label>Module Tile</label>
    <type>TextArea</type>
</CustomField>