Proyecto Individual/force-app/main/default/objects/Trail_Module__c/fields/Quantity_unit__c.field-meta.xml
<CustomField>
    <fullName>Quantity_unit__c</fullName>
    <label>Quantity unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>