Proyecto Individual/force-app/main/default/objects/Trail_Module__c/fields/Time_estimate__c.field-meta.xml
<CustomField>
    <fullName>Time_estimate__c</fullName>
    <label>Time estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>