Proyecto Individual/force-app/main/default/objects/Trail_Module__c/fields/Trail__c.field-meta.xml
<CustomField>
    <fullName>Trail__c</fullName>
    <label>Trail</label>
    <referenceTo>Trail__c</referenceTo>
    <relationshipLabel>Trail - Modules</relationshipLabel>
    <relationshipName>Trail_Modules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>