Proyecto Individual/force-app/main/default/objects/Trail_Module__c/validationRules/Active_Module.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Module</fullName>
    <active>true</active>
    <errorConditionFormula>!Module__r.Active__c</errorConditionFormula>
    <errorMessage>El módulo debe estar Activado</errorMessage>
</ValidationRule>